--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,6 +1,6 @@
 
 body{
-  height: 100vh;
+  height: 100%;
   /* background-image: linear-gradient(white, rgba(0,0,255,0.5)); */
   background-image: linear-gradient(white, rgba(0, 255, 106, 0.89));
   font-size: 20px;
@@ -25,6 +25,7 @@ body{
 
 .chat-container{
   background-image: url("../assets//bg2.jpg");
+  background-size: cover;
   height: 500px;
   width: 80%;
   margin: auto;
@@ -119,18 +120,16 @@ body{
 
 .outer-container{
   text-align: center;
-  vertical-align: auto;
-  
   margin: auto;
-  margin-top: 10%;
+  margin-top: 15%;
   width: 70%;
   border-radius: 20px;
   background-image: url("../assets//bg.jpg");
+  background-size: cover;
 }
 
 .join-chat-container{
   display: inline-block;
-  width: 35%;
   text-align: center;
   border-radius: 10px;
   background-color: rgb(40, 241, 83);
@@ -138,16 +137,15 @@ body{
   margin: auto;
   margin-top: 15%;
   margin-bottom: 15%;
-  padding: 10px;
-
 }
 
-.join-chat-container h1{
-  border-bottom: 3px solid black;
+.join-chat-container h4{
+  border-bottom: 2px solid black;
+  padding: 5px;
 }
 .join-chat-container input{
   width: 60%;
-  padding: 30px;
+  padding: 5px;
   font-size: 30px;
   text-align: center;
   border-radius: 5px;
@@ -156,18 +154,16 @@ body{
 }
 
 .join-chat-container button{
-  padding: 20px;
+  padding: 5px;
   margin-bottom: 10px;
-  font-size: 25px;
-  background-color: rgb(130, 157, 245);
+  background-color: rgb(243, 151, 89);
   border-radius: 100px;
   outline: none;
 }
 
 .join-chat-container button:disabled{
-  padding: 20px;
+  padding: 5px;
   margin-bottom: 10px;
-  font-size: 25px;
   background-color: rgb(218, 221, 231);
   border-radius: 100px;
   outline: none;
@@ -193,9 +189,58 @@ body{
   font-size: 18px;
   border-radius: 20px;
   margin-right: 10%;
+  cursor: pointer;
 }
 
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
 
+.modal-body {
+  position:fixed;
+  background: white;
+  width: 30%;
+  height: auto;
+  top:50%;
+  left:50%;
+  padding: 10px;
+  border-radius: 10px;
+  transform: translate(-50%,-50%);
+}
+
+.modal-header{
+  font-size: 20px;
+  text-align: center;
+  border-bottom: 2px solid black;
+}
+
+.modal-content{
+  margin: 10px;
+}
+.modal-actions{
+  display: flex;
+  justify-content: space-between;
+}
+
+.red-button{
+  background-color: rgb(245, 99, 99);
+  outline: none;
+  padding: 5px;
+  font-size: 17px;
+}
+
+.green-button{
+  background-color: rgb(151, 247, 151);
+}
+
+li{
+  
+}
 
 
 
