--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -40,17 +40,17 @@ body{
 }
 
 .message-container{
-  /* background-color: rgb(106, 137, 231); */
   background-color: seashell;
-  width: 40%;
-  margin: 10px;
+  max-width: 40%;
+  margin: 5px;
   border-radius: 5px;
-  padding: 10px;
+  padding: 2px;
+  overflow-wrap: break-word;
 }
 
 .message{
   font: caption;
-  font-size: 30px;
+  font-size: 1.2rem;
 }
 
 .user-name{
@@ -72,7 +72,8 @@ body{
   text-align: center;
   color: rgb(12, 11, 11);
   background-color: rgb(239, 241, 245);
-  width: 25%;
+  width: 8rem;
+  font-size: 0.5rem;
   margin: auto;
   border-radius: 100px;
   margin-top: 10px;
@@ -89,27 +90,25 @@ body{
 .message-input{
   display: inline-block;
   width: 70%;
-  padding: 20px;
-  font-size: 25px;
+  padding: 5px;
+  font-size: 20px;
   border: 1px solid black;
   border-radius: 10px;
   outline: none;
 }
 
 .send-btn{
-  padding: 0.8rem;
-  height: 80px;
-  border-radius: 100px;
-  font-size: 20px;
+  height: 3rem;
+  border-radius: 90px;
   cursor: pointer;
   border: none;
   outline: none;
-  background-color: greenyellow;
+  background-color: rgb(168, 243, 47);
+  margin-left: 5px;
 }
 
 .send-btn:hover{
   background-color: rgb(90, 240, 90);
-  /* color: white; */
   transition: 0.5s;
 }
 
@@ -121,7 +120,7 @@ body{
 .outer-container{
   text-align: center;
   margin: auto;
-  margin-top: 15%;
+  margin-top:7%;
   width: 70%;
   border-radius: 20px;
   background-image: url("../assets//bg.jpg");
@@ -178,7 +177,7 @@ body{
 .current-user {
   background-color: rgba(0,0,255,0.5);
   padding: 5px;
-  font-size: 18px;
+  font-size: 0.7rem;
   border-radius: 20px;
   margin-left: 10%;
 }
@@ -186,7 +185,7 @@ body{
 .total-user{
   background-color: rgba(0,0,255,0.5);
   padding: 5px;
-  font-size: 18px;
+  font-size: 0.7rem;
   border-radius: 20px;
   margin-right: 10%;
   cursor: pointer;
